changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

CRE: word wrap for messages.
Nicolas Weeger 2010-06-13

CRE: quest step description is multiline too, for edition.
Nicolas Weeger 2010-06-13

CRE: redesign the quest steps panel, to have inplace edition.
This gives a better overview of the steps.
Nicolas Weeger 2010-06-13

Make the plugin calls to player titles respect the custom titles the player
has set.
server/plugins.c, plugins/common, plugins/cfpython
Brendan Lally 2010-06-08

Expose one knowledge function to plugin.
Nicolas Weeger 2010-06-06

CRE: display alchemy's index.
Nicolas Weeger 2010-06-06

Use 'const' for parameters.
Nicolas Weeger 2010-06-06

CRE: "setwhen" basic edition support.
Nicolas Weeger 2010-06-03

CRE: read and write 'setwhen' quest support, no modification for now.
Nicolas Weeger 2010-06-03

server/quest.c, quest step conditions, used to advance quests when another
quest(s) are at the 'right' step(s)
Brendan Lally 2010-05-30

server/quest.c, #define the state numbers in the quest parsing code
Brendan Lally 2010-05-30

Use a specific message to query animation state, fix isn't enough.
Nicolas Weeger 2010-05-30

Fix crash in cfanim.
Nicolas Weeger 2010-05-30

Change log level to error for various things in cf_anim.
Nicolas Weeger 2010-05-30

New variable to cf_anim. Enable object state querying (using 'fix')
to know if an object is animated.
Nicolas Weeger 2010-05-30

CRE: don't hardcode pre and post conditions files.
Nicolas Weeger 2010-05-30

CRE: add 'npctoken' and 'setnpctoken' pre and post conditions.
Nicolas Weeger 2010-05-30

Add DM 'purge_quest_state' command to make it easy to fix quest state