@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+CRE: display artifact values, as a dump for now.
+Nicolas Weeger 2010-06-13
+
 CRE: word wrap for messages.
 Nicolas Weeger 2010-06-13
 
